--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
               <div class="team__part_top">
                 <div class="team__developer_image right">
                   <img
-                    src="./images/p2.jpg"
+                    src="./images/p2.png"
                     alt="Тарасюк Василь"
                     class="team__image team__image_rigth"
                     width="270"
