Додає правки в portfolio та modal bottom

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
           <h2 class="portfolio__title">Портфоліо</h2>
           <ul class="portfolio__list">
             <li class="portfolio__item" data-aos="fade-up">
+              <div class="portfolio__thumb">
               <a
                 href="https://elvent0.github.io/ChessClubFRECS/"
                 target="_blank"
@@ -197,10 +198,15 @@
                   alt="Сайт шахового клубу"
                   class="portfolio__image"
                 />
+                <div class="portfolio__overlay">
+                  <p class="portfolio__description_content">Реалізація сайту-візитки для шахового клубу факультету</p>
+                </div>
+                </div>
                 <p class="portfolio__description">FRECS ChessClub</p>
               </a>
             </li>
             <li class="portfolio__item" data-aos="fade-up">
+              <div class="portfolio__thumb">
               <a
                 href="https://elvent0.github.io/Nike/"
                 target="_blank"
@@ -211,10 +217,15 @@
                   alt="Сайт про Україну"
                   class="portfolio__image"
                 />
+                <div class="portfolio__overlay">
+                  <p class="portfolio__description_content">Реалізація інтернет магазину для продажу фірмового взуття відомих брендів</p>
+                </div>
+                </div>
                 <p class="portfolio__description">Nike</p>
               </a>
             </li>
             <li class="portfolio__item" data-aos="fade-up">
+              <div class="portfolio__thumb">
               <a
                 href="https://elvent0.github.io/KNUgle/"
                 target="_blank"
@@ -225,10 +236,15 @@
                   alt="Сайт-шпаргалка"
                   class="portfolio__image"
                 />
+                <div class="portfolio__overlay">
+                  <p class="portfolio__description_content">Реалізація сторінки, яка дає відповіді на всі питання</p>
+                </div>
+                </div>
                 <p class="portfolio__description">KNUgle</p>
               </a>
             </li>
             <li class="portfolio__item" data-aos="fade-up">
+              <div class="portfolio__thumb">
               <a
                 href="https://elvent0.github.io/Practice/"
                 target="_blank"
@@ -239,10 +255,15 @@
                   alt="Сайт"
                   class="portfolio__image"
                 />
+                <div class="portfolio__overlay">
+                  <p class="portfolio__description_content">Реалізація першої версії сайту для Технологічної практики</p>
+                </div>
+                </div>
                 <p class="portfolio__description">Practica V1.0</p>
               </a>
             </li>
             <li class="portfolio__item" data-aos="fade-up">
+              <div class="portfolio__thumb">
               <a
                 href="https://elvent0.github.io/nordstudio/"
                 target="_blank"
@@ -253,6 +274,10 @@
                   alt="Сайт"
                   class="portfolio__image"
                 />
+                <div class="portfolio__overlay">
+                  <p class="portfolio__description_content">Реалізація другої версії сайту для Технологічної практики</p>
+                </div>
+                </div>
                 <p class="portfolio__description">NordStudio</p>
               </a>
             </li>
@@ -337,7 +362,9 @@
           >
         </div>
         <div class="backdrop is-hidden" data-modal-2>
-          <div class="modal__bottom">
+          
+          <div class="modal__bottom ">
+            <img src="./images/modal.png" width="80" class="modal__image_bottom">
             <button type="button" class="modal__button" data-modal-close-2>
               <svg width="20" height="20" class="modal__close">
                 <use href="./images/icons.svg#close" class="modal__use"></use>
