--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -297,9 +297,9 @@
                     <h3 class="team__name">Тарасюк Василь</h3>
                     <ul class="team__skills">
                       <li class="team__skills-item">UI/UX Дизайн</li>
-                      <li class="team__skills-item">HTML, CSS, JS</li>
-                      <li class="team__skills-item">Буде додано пункт*</li>
-                      <li class="team__skills-item">Буде додано пункт*</li>
+                      <li class="team__skills-item">HTML (BEM)</li>
+                      <li class="team__skills-item">CSS (SASS | SCSS)</li>
+                      <li class="team__skills-item">JS, AOS</li>
                     </ul>
                   </div>
                 </div>
@@ -331,9 +331,9 @@
                     <h3 class="team__name">Середюк Павло</h3>
                     <ul class="team__skills">
                       <li class="team__skills-item">Бек-Енд</li>
-                      <li class="team__skills-item">Буде додано пункт*</li>
-                      <li class="team__skills-item">Буде додано пункт*</li>
-                      <li class="team__skills-item">Буде додано пункт*</li>
+                      <li class="team__skills-item">Текст</li>
+                      <li class="team__skills-item">Текст</li>
+                      <li class="team__skills-item">Текст</li>
                     </ul>
                   </div>
                 </div>
