--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               </svg>
             </button>
             <form
-              action="тут буде лінк на прогу, що обробляє відправку форми"
+              action="./index.html"
               method="POST"
             >
               <ul class="modal__list">
