--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
               </svg>
             </button>
             <form
-              action="./index.html"
-              method="POST"
+              action="./mail.py"
+              method="GET"
             >
               <ul class="modal__list">
                 <li class="modal__item">
