--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               </svg>
             </button>
             <form
-              action="./index.html"
+              action="./mail.py"
               method="POST"
             >
               <ul class="modal__list">
