--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
               </svg>
             </button>
             <form
-              action="./mail.py"
-              method="GET"
+              action="mail.php"
+              method="POST"
             >
               <ul class="modal__list">
                 <li class="modal__item">
@@ -422,8 +422,8 @@
                 <li class="modal__item">
                   <label class="modal__item_paragraph">Тип сайту:</label>
                   <select name="type" id="" class="modal__input">
-                    <option value="">Шаблонний</option>
-                    <option value="">Персоналізований</option>
+                    <option value="шаблонний">Шаблонний</option>
+                    <option value="персоналізований">Персоналізований</option>
                   </select>
                 </li>
               </ul>
