--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
                   <div>
                     <h3 class="team__name">Середюк Павло</h3>
                     <ul class="team__skills">
-                      <li class="team__skills-item">Бек-Енд</li>
-                      <li class="team__skills-item">Текст</li>
-                      <li class="team__skills-item">Текст</li>
+                      <li class="team__skills-item">PHP</li>
+                      <li class="team__skills-item">Авторизація</li>
+                      <li class="team__skills-item">Деплой</li>
                       <li class="team__skills-item">Текст</li>
                     </ul>
                   </div>
@@ -465,6 +465,13 @@
         </div>
       </div>
     </footer>
+    <div class="mobile__backdrop">
+      <div class="mobile__content">
+      <img src="./images/logo3.png" alt="картинка" class="mobile__image">
+      <p class="mobile__text mobile__text--first mobile__text--border">Даний сайт підтримує тільки широкі екрани</p>
+      <p class="mobile__text mobile__text--second">Спробуйте відкрити панель розробника f11 та штучно збільшити ширину viewport</p>
+      </div>
+    </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
