--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a href="#price" class="header__link">Вартість</a>
             </li>
 
-            <p class="header__paragraph">Авторизація:</p>
+            <!-- <p class="header__paragraph">Авторизація:</p>
             <li class="header__item">
               <a href="" class="header__link google">
                 <svg width="30" height="30">
@@ -65,7 +65,7 @@
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
-            </li>
+            </li> -->
           </ul>
         </nav>
       </div>
@@ -331,9 +331,9 @@
                     <h3 class="team__name">Середюк Павло</h3>
                     <ul class="team__skills">
                       <li class="team__skills-item">PHP</li>
-                      <li class="team__skills-item">Авторизація</li>
+                      <li class="team__skills-item">Підключення форми</li>
                       <li class="team__skills-item">Деплой</li>
-                      <li class="team__skills-item">Текст</li>
+                      <li class="team__skills-item">Хостинг</li>
                     </ul>
                   </div>
                 </div>
@@ -458,8 +458,8 @@
             <a href="mailto:vasyl_tarasyuk@knu.ua" class="footer__link"
               >vasyl_tarasyuk@knu.ua</a
             >
-            <a href="mailto:vasyl_tarasyuk@knu.ua" class="footer__link"
-              >vasyl_tarasyuk@knu.ua</a
+            <a href="mailto:pavseredyuk@gmail.com" class="footer__link"
+              >pavseredyuk@gmail.com</a
             >
           </div>
         </div>
